--- a/public/fonts.css
+++ b/public/fonts.css
@@ -11,3 +11,11 @@
   src: url("Cascadia.woff2");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "ZHIWNDXSG";
+  src: url("FZSJ-ZHIWNDXSG.woff2");
+  font-display: swap;
+}
+
+
